[project]
name = "poi-extract"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.11.14"
dependencies = [
    "duckdb>=1.4.3",
    "duckdb-engine>=0.17.0",
    "geopandas>=1.1.2",
    "geopy>=2.4.1",
    "ipython>=9.9.0",
    "jupysql>=0.11.1",
    "jupyter>=1.1.1",
    "pandas>=2.3.3",
    "pyrosm>=0.6.2",
    "shapely>=2.1.2",
]
