[project]
name = "poi-extract"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.11.14"
dependencies = [
    "click>=8.3.1",
    "duckdb>=1.4.3",
    "duckdb-engine>=0.17.0",
    "geopandas>=1.1.2",
    "geopy>=2.4.1",
    "pandas>=2.3.3",
    "pyrosm>=0.6.2",
    "shapely>=2.1.2",
]
